# distance-3d

./: CMakeLists.txt  README.md
3d-project/: CMakeLists.txt
3d-project/include/: constants.h  distance.h  point_3d.h  segment_3d.h  vector_3d.h
3d-project/src/: app_main.cpp  distance.cpp  point_3d.cpp  segment_3d.cpp  vector_3d.cpp
3d-project/tests/: basic_tests.cpp  distance_tests.cpp  point_3d_tests.cpp
